--- a/MvvmTools/VSPackage.resx
+++ b/MvvmTools/VSPackage.resx
@@ -117,11 +117,19 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="101" xml:space="preserve">
+    <value>MVVM Tools</value>
+    <comment>MVVM Tools</comment>
+  </data>
+  <data name="106" xml:space="preserve">
+    <value>General</value>
+    <comment>General page</comment>
+  </data>
   <data name="110" xml:space="preserve">
     <value>Mvvm Tools</value>
   </data>
   <data name="112" xml:space="preserve">
-    <value>MVVM Tools is a set of tools to make life easier for XAML MVVM developers.</value>
+    <value>MVVM Tools is a set of tools for XAML MVVM developers.</value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="400" type="System.Resources.ResXFileRef, System.Windows.Forms">
