--- a/MvvmTools/Resources.resx
+++ b/MvvmTools/Resources.resx
@@ -112,31 +112,54 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="101" xml:space="preserve">
-    <value>MVVM Tools</value>
+  <data name="ButtonClearImageText" xml:space="preserve">
+    <value>&amp;Clear Image</value>
   </data>
-  <data name="106" xml:space="preserve">
-    <value>Go to View or ViewModel</value>
+  <data name="ChooseImageButtonText" xml:space="preserve">
+    <value>Choose &amp;Image</value>
   </data>
-  <data name="107" xml:space="preserve">
-    <value>General</value>
+  <data name="MessageCaption" xml:space="preserve">
+    <value>Information</value>
   </data>
-  <data name="108" xml:space="preserve">
-    <value>Extract ViewModel from View</value>
+  <data name="MessageOnActivateCancelled" xml:space="preserve">
+    <value>Cancelled the OnActivate event</value>
   </data>
-  <data name="110" xml:space="preserve">
-    <value>Mvvm Tools</value>
+  <data name="MessageOnActivateEntered" xml:space="preserve">
+    <value>Press Cancel to cancel this activation.  OK to continue</value>
   </data>
-  <data name="112" xml:space="preserve">
-    <value>MVVM Tools is a set of tools for XAML MVVM developers.</value>
+  <data name="MessageOnApply" xml:space="preserve">
+    <value>In OnApply</value>
   </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="400" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\MvvmToolsPackage.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="MessageOnApplyCancelled" xml:space="preserve">
+    <value>Cancelled the OnApply event</value>
+  </data>
+  <data name="MessageOnApplyEntered" xml:space="preserve">
+    <value>Press Cancel to cancel this OnApply.  OK to continue</value>
+  </data>
+  <data name="MessageOnClosed" xml:space="preserve">
+    <value>OnClosed</value>
+  </data>
+  <data name="MessageOnDeactivate" xml:space="preserve">
+    <value>In OnDeactivate</value>
+  </data>
+  <data name="MessageOnDeactivateCancelled" xml:space="preserve">
+    <value>Cancelled the OnDeactivate event</value>
+  </data>
+  <data name="MessageOnDeactivateEntered" xml:space="preserve">
+    <value>Press Cancel to cancel this deactivation.  OK to continue</value>
+  </data>
+  <data name="OnActivate" xml:space="preserve">
+    <value>OnActivate</value>
+  </data>
+  <data name="OnApply" xml:space="preserve">
+    <value>OnApply</value>
+  </data>
+  <data name="OnDeactivate" xml:space="preserve">
+    <value>OnDeactivate</value>
   </data>
 </root>
