--- a/MvvmTools/VSPackage.resx
+++ b/MvvmTools/VSPackage.resx
@@ -135,6 +135,9 @@
   <data name="112" xml:space="preserve">
     <value>MVVM Tools is a set of tools for XAML MVVM developers.</value>
   </data>
+  <data name="113" xml:space="preserve">
+    <value>Solution and Projects</value>
+  </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="400" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\MvvmToolsPackage.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
