Aded new options pages for template options and maintenance.

--- a/MvvmTools/VSPackage.resx
+++ b/MvvmTools/VSPackage.resx
@@ -139,7 +139,10 @@
     <value>Solution and Projects</value>
   </data>
   <data name="114" xml:space="preserve">
-    <value>Templates</value>
+    <value>Template Options</value>
+  </data>
+  <data name="115" xml:space="preserve">
+    <value>Template Maintenance</value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="400" type="System.Resources.ResXFileRef, System.Windows.Forms">
